[tool.poetry]
name = "pipen-cli-init"
version = "1.0.1"
description = "A pipen cli plugin to create a pipen project (pipeline)"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pipen = {version = "1.1.*", allow-prereleases = true}
copier = "^9"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.plugins.pipen_cli]
cli-init = "pipen_cli_init:PipenCliInit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
