[tool.poetry]
name = "example"
version = "0.0.1"
description = "An awesome pipeline"
authors = ["Author <author@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pipen = "^0.14"
pipen-filters = "^0.12"
pipen-verbose = "^0.11"
pipen-args = "^0.14"
pipen-report = "^0.18"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
example = "example.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
