[tool.poetry]
name = "example"
version = "0.0.1"
description = "An awesome pipeline"
authors = ["Author <author@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pipen = {version = "1.1.*", allow-prereleases = true}
pipen-filters = "^1.1"
pipen-verbose = "^1.1"
pipen-args = "^1.1"
pipen-report = "^1.1"

[tool.poetry.group.dev.dependencies]


[tool.poetry.scripts]
example = "example.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
